# Flare

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
src/: Application.cpp
